fixes to dark mode

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -23,7 +23,7 @@ body.dark {
         font-size: 20px;
         color: $color_1
 	}
-	h1 a {
+	#bas {
 		color: $color_1;
 	}
 }
